--- a/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/WindowCoordinador.xaml
+++ b/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/WindowCoordinador.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias.InterfacesUsuario"
         mc:Ignorable="d"
-        Title="WindowCoordinador" Height="450" Width="800">
+        Title="Sistema Tutorías: Coordinador" Height="450" Width="800" Icon="..\Resources/1200px-Logo_de_la_Universidad_Veracruzana.svg.png"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="SingleBorderWindow">
     <Grid>
         
     </Grid>
