--- a/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowReporteTutoria.xaml
+++ b/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowReporteTutoria.xaml
@@ -1,22 +1,20 @@
-﻿<Window x:Class="ClienteSistemaTutorias.InterfacesUsuario.WindowSesionesTutoria"
+﻿<Window x:Class="ClienteSistemaTutorias.InterfacesUsuario.WindowReporteTutoria"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias.InterfacesUsuario"
         mc:Ignorable="d"
-        Title="Sesiones de Tutoria" Height="450" Width="800" Icon="..\Resources/1200px-Logo_de_la_Universidad_Veracruzana.svg.png"
-        WindowStartupLocation="CenterScreen"
-        WindowStyle="SingleBorderWindow">
+        Title="Reporte Tutoria" Height="450" Width="800">
     <Grid>
-        <Button Content="Nueva" HorizontalAlignment="Left" Margin="538,25,0,0" VerticalAlignment="Top" FontSize="20" Width="80" Height="40" Click="Button_Click"/>
-        <Button Content="Modificar" HorizontalAlignment="Left" Margin="660,25,0,0" VerticalAlignment="Top" FontSize="20" Width="110" Height="40"/>
         <DataGrid x:Name="dgTutoriasAcademicas" AutoGenerateColumns="False" Margin="0,84,0,50" CanUserAddRows="False" FontSize="20">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Fecha" Binding="{Binding fecha}" Width="*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Num Sesion" Binding="{Binding numSesion}" Width="*" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Periodo Escolar" Binding="{Binding periodoEscolar}" Width="*" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
+        <Button x:Name="btLlenarReporte" Content="Llenar nuevo Reporte" HorizontalAlignment="Center" Margin="0,25,0,0" VerticalAlignment="Top" FontSize="20" Width="218" Height="40" Click="btNuevoReporteTutoria_Click"/>
+        <Button x:Name="btRegistrarComentarios" Content="Dar Comentarios Generales" HorizontalAlignment="Left" Margin="536,25,0,0" VerticalAlignment="Top" FontSize="20" Width="254" Height="40" Click="btRegistrarComentarios_Click"/>
+
     </Grid>
 </Window>
