--- a/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowAsignarTutor.xaml
+++ b/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowAsignarTutor.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias.InterfacesUsuario"
         mc:Ignorable="d"
-        Title="Asignar Tutor a Estudiante" Height="450" Width="800">
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="SingleBorderWindow"
+        Title="Asignar Tutor a Estudiante" Height="450" Width="800" Icon="..\..\Resources/1200px-Logo_de_la_Universidad_Veracruzana.svg.png">
     <Grid>
         <Label Content="Tutor que se desea:" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" FontSize="20" Width="209"/>
         <ComboBox x:Name="cbTutor" HorizontalAlignment="Left" Margin="219,0,0,0" VerticalAlignment="Center" Width="571" FontSize="20"/>
