--- a/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowRegistrarEstudiante.xaml
+++ b/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowRegistrarEstudiante.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias.InterfacesUsuario"
         mc:Ignorable="d"
-        Title="RegistrarEstudiante" Height="450" Width="800">
+        Title="RegistrarEstudiante" Height="450" Width="800"
+        Icon="..\..\Resources/1200px-Logo_de_la_Universidad_Veracruzana.svg.png"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="SingleBorderWindow">
     <Grid>
         <Label Content="Matrícula:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="141" FontSize="20"/>
         <Label Content="Nombre:" HorizontalAlignment="Left" Margin="10,139,0,0" VerticalAlignment="Top" Width="141" FontSize="20"/>
