--- a/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowRegistrarTutorAcademico.xaml
+++ b/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowRegistrarTutorAcademico.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias.InterfacesUsuario"
         mc:Ignorable="d"
+        Title="Registrar Tutor Academico" Height="450" Width="800"
+        Icon="..\..\Resources/1200px-Logo_de_la_Universidad_Veracruzana.svg.png"
         WindowStartupLocation="CenterScreen"
-        Title="Registrar Tutor Academico" Height="450" Width="800">
+        WindowStyle="SingleBorderWindow">
     <Grid>
         <Label Content="Password:" HorizontalAlignment="Left" Margin="627,103,0,0" VerticalAlignment="Top" Width="100" FontSize="20"/>
         <TextBox x:Name="tbPassword" HorizontalAlignment="Left" Margin="564,157,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="226" FontSize="16"/>
