--- a/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowSesionesTutoriaCierreReporte.xaml
+++ b/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/CUs/WindowSesionesTutoriaCierreReporte.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClienteSistemaTutorias.InterfacesUsuario"
         mc:Ignorable="d"
-        Title="Cierre de Reporte de Tutorías" Height="450" Width="800">
+        Title="Cierre de Reporte de Tutorías" Height="450" Width="800"
+        Icon="..\..\Resources/1200px-Logo_de_la_Universidad_Veracruzana.svg.png"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="SingleBorderWindow">
     <Grid>
         <DataGrid x:Name="dgSesionesTutoria" AutoGenerateColumns="False" Margin="0,0,182,0" CanUserAddRows="False" FontSize="16">
             <DataGrid.Columns>
