--- a/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/Menus/WindowTutor.xaml
+++ b/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/Menus/WindowTutor.xaml
@@ -10,8 +10,7 @@
         WindowStyle="SingleBorderWindow">
     <Grid>
         <Label x:Name="lbBienvenido" Content="." HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" FontSize="20"/>
-        <Button x:Name="btSesionesTutoria" Content="Sesiones de Tutoría" HorizontalAlignment="Left" Margin="160,128,0,0" VerticalAlignment="Top" FontSize="16" Width="200" Height="55" Click="btSesionesTutoria_Click"/>
-        <Button x:Name="btReportesTutoria" Content="Reportes de Tutoría" HorizontalAlignment="Left" Margin="443,128,0,0" VerticalAlignment="Top" FontSize="16" Width="200" Height="55" Click="btReportesTutoria_Click"/>
+        <Button x:Name="btSesionesTutoria" Content="Sesiones de Tutoría" HorizontalAlignment="Center" Margin="0,183,0,0" VerticalAlignment="Top" FontSize="16" Width="200" Height="55" Click="btSesionesTutoria_Click"/>
         <Label Content="Bienvenido(a)" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" Width="246"/>
         <Button x:Name="btCerrarSesion" Content="Cerrar Sesión" HorizontalAlignment="Left" Margin="650,365,0,0" VerticalAlignment="Top" Height="34" Width="117" Click="btCerrarSesion_Click" FontSize="16"/>
 
