--- a/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/Menus/WindowJefeCarrera.xaml
+++ b/Codigo/SistemaTutorias/ClienteSistemaTutorias/InterfacesUsuario/Menus/WindowJefeCarrera.xaml
@@ -11,8 +11,7 @@
     <Grid>
         <Label Content="Bienvenido(a)" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" Width="246"/>
         <Label x:Name="lbBienvenido" Content="." HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,50,0,0" FontSize="20"/>
-        <Button x:Name="btReporteTutoria" Content="Reporte Tutoria" HorizontalAlignment="Left" Margin="189,0,0,0" VerticalAlignment="Center" Height="56" Width="206" Click="btReporteTutoria_Click" FontSize="16"/>
-        <Button x:Name="btProblematica" Content="Problemática Académica" HorizontalAlignment="Left" Margin="421,0,0,0" VerticalAlignment="Center" Height="56" Width="206" Click="btProblematica_Click" FontSize="16"/>
+        <Button x:Name="btReporteTutoria" Content="Reporte Tutoria" HorizontalAlignment="Center" VerticalAlignment="Center" Height="56" Width="206" Click="btReporteTutoria_Click" FontSize="16"/>
         <Button x:Name="btCerrarSesion" Content="Cerrar Sesión" HorizontalAlignment="Left" Margin="652,363,0,0" VerticalAlignment="Top" Height="34" Width="117" Click="btCerrarSesion_Click" FontSize="16"/>
 
     </Grid>
